alignwide on large screens on frontend fix

--- a/src/blocks/block-grid-container/styles/style.scss
+++ b/src/blocks/block-grid-container/styles/style.scss
@@ -401,4 +401,11 @@
 		margin-left: -10%;
 		margin-right: -10%;
 	}
+
+	.page-template-default .entry-content>.c9-grid .container.alignwide {
+		width: 120%;
+		max-width: 1368px;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
